replaced restartGame with quitGame button/functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div id="wrapper">
 
-    <div class="parent-container">
+    <div class="parentcontainer">
 
       <div class ="container" >
 
