replaced div elements with button elements on menu/homescreen

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               
               <div class="panel">
 
-                <div id="play"  class="button">play</div>
+                <!-- <div id="play"  class="button">play</div> -->
+
+                <button id="play">play</button>
 
               </div>
 
